[project]
name = "whk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx[http2]>=0.28.1",
    "jinja2>=3.1.6",
    "mkdocs-advanced-seo>=1.0.3",
    "mkdocs-document-dates",
    "mkdocs-glightbox>=0.5.2",
    "mkdocs-katex-ssr",
    "mkdocs-llmstxt>=0.5.0",
    "mkdocs-material[imaging]>=9.7.6",
    "mkdocs-materialx[imaging]>=10.1.0",
    "mkdocs-minify-html-plugin>=0.3.10",
    "mkdocs-rss-plugin>=1.17.9",
    "mkdocs-table-reader-plugin>=3.1.0",
    "properdocs>=1.6.7",
    "pyyaml>=6.0.3",
    "requests>=2.33.0",
    "toml>=0.10.2",
]

[tool.uv.sources]
mkdocs-document-dates = { git = "https://github.com/raineblog/mkdocs-document-dates.git" }
mkdocs-katex-ssr = { git = "https://github.com/raineblog/mkdocs-katex-ssr.git" }

[dependency-groups]
dev = [
    "pypandoc>=1.17",
    "pyside6>=6.10.2",
    "rich>=14.3.3",
]
