[project]
name = "whk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cairosvg>=2.9.0",
    "httpx[http2]>=0.28.1",
    "jinja2>=3.1.6",
    "mergedeep>=1.3.4",
    "mkdocs-advanced-seo>=1.0.3",
    "mkdocs-document-dates",
    "mkdocs-glightbox>=0.5.2",
    "mkdocs-llmstxt>=0.5.0",
    "mkdocs-materialx>=10.1.1",
    "mkdocs-minify-html-plugin>=0.3.10",
    "mkdocs-rss-plugin>=1.17.9",
    "mkdocs-table-reader-plugin>=3.1.0",
    "mkpandocs>=1.0.1",
    "pillow>=12.2.0",
    "pyyaml>=6.0.3",
]

[tool.uv]
override-dependencies = [
    "mkdocs; sys_platform == 'never'",
    "properdocs; sys_platform == 'never'",
]

[tool.uv.sources]
mkdocs-document-dates = { git = "https://github.com/raineblog/mkdocs-document-dates.git" }

[dependency-groups]
dev = [
    "pyside6>=6.10.2",
    "rich>=14.3.3",
]
